fairway-sf/force-app/main/default/objects/Practice_Insight__c/Practice_Insight__c.object-meta.xml
<CustomObject>
    <label>Practice Insight</label>
    <pluralLabel>Practice Insights</pluralLabel>
    <description>AI or coach-generated observation/recommendation surfaced to a golfer, typically tied to a session.</description>
    <nameField>
        <label>Practice Insight Name</label>
        <type>AutoNumber</type>
        <displayFormat>PI-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>