fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Accepted_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Dismissed__c</fullName>
    <label>Accepted/Dismissed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>