fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <label>Club</label>
    <type>Text</type>
    <length>50</length>
</CustomField>