fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>