fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Created_By_AI__c.field-meta.xml
<CustomField>
    <fullName>Created_By_AI__c</fullName>
    <label>Created By AI</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>