fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Golf_Session__c.field-meta.xml
<CustomField>
    <fullName>Golf_Session__c</fullName>
    <label>Golf Session</label>
    <type>Lookup</type>
    <referenceTo>Golf_Session__c</referenceTo>
    <relationshipName>Practice_Insights</relationshipName>
    <relationshipLabel>Practice Insights</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>