fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Golfer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Golfer_Profile__c</fullName>
    <label>Golfer Profile</label>
    <type>Lookup</type>
    <referenceTo>Golfer_Profile__c</referenceTo>
    <relationshipName>Practice_Insights</relationshipName>
    <relationshipLabel>Practice Insights</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>