fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Insight_Type__c.field-meta.xml
<CustomField>
    <fullName>Insight_Type__c</fullName>
    <label>Insight Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Trend</fullName><default>false</default><label>Trend</label></value>
            <value><fullName>Miss Pattern</fullName><default>false</default><label>Miss Pattern</label></value>
            <value><fullName>Consistency</fullName><default>false</default><label>Consistency</label></value>
            <value><fullName>Club Recommendation</fullName><default>false</default><label>Club Recommendation</label></value>
            <value><fullName>Practice Recommendation</fullName><default>false</default><label>Practice Recommendation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>