fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <label>Observation</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>