fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>