fairway-sf/force-app/main/default/objects/Practice_Insight__c/fields/Viewed_By_Golfer__c.field-meta.xml
<CustomField>
    <fullName>Viewed_By_Golfer__c</fullName>
    <label>Viewed By Golfer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>